# evo_q

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
conda.recipe/: meta.yaml
docs/: Doxyfile
include/: compare.h  convergence.h  evo_q.hpp  gene.h  genetics.hpp  organism.h  parse.h  phenotype.h  population.h  population_backup.h  python.hpp  testProblems.hpp  util.h
include/evo_q/: .evo_q.hpp.swp  convergence.hpp  evo_q.hpp
recipe/: meta.yaml
src/: compare.cpp  convergence.cpp  gene.cpp  main_test.cpp  organism.cpp  parse.cpp  phenotype.cpp  population.cpp  python.cpp  testProblems.cpp  util.cpp
tests/: ga.conf  ga_noisy.conf  test.py
